# frame-chain-studio

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  provider-config.docker.json  provider-config.example.json  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py  redaction.py  (+1 more)
backend/fake_provider/: __init__.py  app.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_fake_provider.py  test_generation_flow.py  test_generation_worker.py  test_media_validation.py  test_migrations.py  test_phase2f_provider_worker_state.py  test_phase3d2a_core_ux.py  test_project_render.py  test_prompt_compiler.py  test_provider_asset_cache.py  test_provider_http.py  test_provider_management.py  test_provider_mapping.py  test_provider_registry.py  test_provider_visual_review.py  test_quality_checks.py  test_ready_config.py  test_redaction.py  test_reliability_hardening.py  test_result_downloader.py  test_result_worker.py  test_retry_policy.py  test_route_registry.py  test_scene_cut.py  test_script_import.py  test_script_parser.py  test_state_machine.py  test_storyboard_apply.py  test_storyboard_builder.py  test_structured_continuity.py  test_task_service.py  test_task_state_machine.py  test_toapis_live_gate.py  test_toapis_paid_readiness_candidate.py  test_toapis_provider.py  test_toapis_readiness_scripts.py  test_toapis_recovery_planning.py  test_toapis_verification_candidates.py  test_toapis_verification_orchestrator.py  (+4 more)
(+192 files in other folders)
